<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simply.schedule.activity.TeachersListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTeachers"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@color/secondary_on"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <TextView
        android:id="@+id/tvNothingToShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nothing_to_show"
        android:visibility="gone" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
