...
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

...
